--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   "main": "index.js",
   "devDependencies": {
     "browser-sync": "^2.27.7",
-    "node-sass": "^7.0.0"
+    "node-sass": "^7.0.0",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss": "node-sass --output-style compressed -o dist/css src/scss",
-    "serve": "browser-sync start --server --files 'dist/css/*.css, **/*.html'"
+    "serve": "browser-sync start --server --files 'dist/css/*.css, **/*.html'",
+    "watch:css": "onchange \"src/scss/*.scss\" -- npm run scss",
+
+    "start": "run-p serve watch:css"
   },
   "repository": {
     "type": "git",
